--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,6 @@
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-pnpm-debug.log*
-
-# env
+node_modules
+.next
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+*.log
+.vercel
