--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "next-neon-starter",
+  "name": "neon-next-cms",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p 3000"
   },
   "dependencies": {
-    "@neondatabase/serverless": "^0.9.0",
-    "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18"
+    "@neondatabase/serverless": "^0.9.5",
+    "next": "^14.2.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "typescript": "^5"
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.21",
+    "typescript": "^5.5.3"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=18.17"
   }
 }
