--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.9.5",
+    "bcryptjs": "^3.0.3",
+    "jose": "^6.1.2",
     "next": "^14.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
