--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.9.5",
+    "@vercel/blob": "^2.0.0",
     "bcryptjs": "^3.0.3",
+    "easymde": "^2.20.0",
     "jose": "^6.1.2",
     "next": "^14.2.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-simplemde-editor": "^5.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.30",
