--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "next": "^14.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-simplemde-editor": "^5.2.0"
+    "react-markdown": "^10.1.0",
+    "react-simplemde-editor": "^5.2.0",
+    "rehype-sanitize": "^6.0.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.30",
