--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@vercel/blob": "^2.0.0",
     "bcryptjs": "^3.0.3",
     "easymde": "^2.20.0",
+    "framer-motion": "^12.23.24",
     "jose": "^6.1.2",
+    "lucide-react": "^0.554.0",
     "next": "^14.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
